# models/problem_basic.go
@@ -21,7 +21,13 @@ func (table *ProblemBasic) TableName() string {
 	return "problem_basic"
 }
 
-func GetProblemList(keyword string) *gorm.DB {
-	return DB.Model(new(ProblemBasic)).
+func GetProblemList(keyword, categoryIdentity string) *gorm.DB {
+	tx := DB.Model(new(ProblemBasic)).
+		Preload("ProblemCategories").Preload("ProblemCategories.CategoryBasic").
 		Where("title like ? or content like ?", "%"+keyword+"%", "%"+keyword+"%")
+	if categoryIdentity != "" {
+		tx.Joins("RIGHT JOIN problem_category pc on pc.problem_id = problem_basic.id").
+			Where("pc.category_id = (SELECT cb.id FROM category_basic cb WHERE cb.identity = ? )", categoryIdentity)
+	}
+	return tx
 }
