# models/submit_basic.go
@@ -18,3 +18,23 @@ type SubmitBasic struct {
 func (table *SubmitBasic) TableName() string {
 	return "submit_basic"
 }
+
+func GetSubmitList(problemIdentity, userIdentity string, status int) *gorm.DB {
+	tx := DB.Model(new(SubmitBasic)).
+		Preload("ProblemBasic", func(db *gorm.DB) *gorm.DB {
+			return db.Omit("content") //省略content
+		}).Preload("UserBasic")
+
+	if problemIdentity != "" {
+		tx.Where("problem_identity =?", problemIdentity)
+	}
+
+	if userIdentity != "" {
+		tx.Where("user_identity =?", userIdentity)
+	}
+	if status != 0 {
+		tx.Where("status =?", status)
+	}
+
+	return tx
+}
